src/rules/snapshots/pg_migration_lint__rules__pgm001__tests__existing_table_no_concurrent_fires.snap
---
source: src/rules/pgm001.rs
expression: findings
---
- rule_id: PGM001
  severity: Critical
  message: "CREATE INDEX on existing table 'orders' should use CONCURRENTLY to avoid holding a SHARE lock that blocks writes."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
